--- a/Kosmisch.Sample.OnPremisesAspnetApp/Kosmisch.Sample.OnPremisesAspnetApp.csproj
+++ b/Kosmisch.Sample.OnPremisesAspnetApp/Kosmisch.Sample.OnPremisesAspnetApp.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Data\MyContext.cs" />
+    <Compile Include="Filters\LogFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
