--- a/Kosmisch.Sample.OnPremisesAspnetApp/Kosmisch.Sample.OnPremisesAspnetApp.csproj
+++ b/Kosmisch.Sample.OnPremisesAspnetApp/Kosmisch.Sample.OnPremisesAspnetApp.csproj
@@ -129,6 +129,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\EmailHelper.cs" />
+    <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Migrations\202006222225467_Initial.cs" />
     <Compile Include="Migrations\202006222225467_Initial.Designer.cs">
       <DependentUpon>202006222225467_Initial.cs</DependentUpon>
